fix autogrow textarea on Firefox

--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -187,7 +187,7 @@
         However, it causes the text to exhibit the behavior seen with
         "pre" that is described below.
         */
-        white-space: normal
+        white-space: pre
 
     > .textarea-size
         visibility: hidden
